# detection_incendies

./: .gitignore  README.md  main.py  pipeline.py  pyproject.toml  train.py
notebooks/: emese_exploration.ipynb  matthis_exploration.ipynb
prepare_data/: data_cleaner.py  data_explorer.py  data_loader.py  data_preparation.py
tests/: test_data_cleaner.py  test_data_explorer.py
visualization/: run_visualization.py
